# text_analyzer_service

./: .gitignore  README.md  event_handler.py  main.py  pyproject.toml  requirements.txt
conf/: __init__.py  asgi.py  proj_settings.py
text_analyzer_service/posts/: urls.py
text_analyzer_service/posts/application/: analyzer.py
text_analyzer_service/posts/infrastructure/api/: views.py
