[tool.poetry]
name = "text-analyzer"
version = "0.1.0"
description = ""
authors = ["alec <alejo1ibarra@gmail.com>"]
readme = "README.md"
packages = [{include = "text_analyzer"}]

[tool.poetry.dependencies]
python = "^3.8"
confluent-kafka = "^2.1.1"
python-dotenv = "^1.0.0"
fastapi = "^0.97.0"
SQLAlchemy = "^2.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
